# excel-word

./: pyproject.toml
excel_word/logic/: excel_bd.py
excel_word/scripts/: bd.py
